# pvpn-tui

./: .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pvpn_tui/: _logging.py  app.py  auth.py  cli.py  config.py  connection.py  local_agent.py  qbittorrent.py  resolver.py  state.py  wg.py  widgets.py
src/pvpn_tui/proton_api/: __init__.py  agent.py  auth.py  types.py
src/pvpn_tui/screens/: login.py  main.py  servers.py
tests/: test_config.py  test_connection.py  test_qbittorrent.py  test_resolver.py  test_state.py  test_wg.py  test_widgets.py
tests/proton_api/: test_agent.py  test_auth.py
tests/screens/: conftest.py  test_login_screen.py  test_main.py  test_main_screen.py  test_servers.py  test_servers_screen.py
